2000-11-28  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Fortran 77 Compiler Characteristics):
	Don't suggest obsolete AC_LANG_FORTRAN77.
	(Language Choice): Better preamble.

2000-11-28  Pavel Roskin  <proski@gnu.org>

	* doc/install.texi: Minor changes to eliminate TeX warnings.
	* doc/autoconf.texi: Likewise. Typo fixes.

2000-11-23  Akim Demaille  <akim@epita.fr>

	* tests/atconfig.in: Move code into...
	* tests/atgeneral.m4 (AT_INIT): here.
	Use AS_SHELL_SANITIZE.

2000-11-23  Akim Demaille  <akim@epita.fr>

	Have the test suite list of the test groups and their references.

	* tests/atgeneral.m4 (_m4_divert(SUITE_PRO)): Remove, replaced
	by...
	(_m4_divert(DEFAULT), _m4_divert(OPTIONS), _m4_divert(HELP))
	(_m4_divert(SETUP)): these.
	(_m4_divert(SUITE_EPI)): Rename as...
	(_m4_divert(TAIL)): this.
	(AT_INIT): Adjust to the new diversions.
	Insert the magic number.
	Accept test groups as cli argument.
	List the test groups.
	Rename TESTS, test, and tests as at_tests_all, at_test, and
	at_tests.
	Have the debug scripts pass options to test suite.
	Remove their banner.
	* tests/atspecific.m4: Don't divert to 0.
	* suite.at: Don't insert the magic number.

2000-11-23  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_divert, m4_undivert): Support named diversions.
	* tests/atgeneral.m4 (_m4_divert(SUITE_PRO), _m4_divert(TESTS))
	(_m4_divert(SUITE_EPI), _m4_divert(TEST)): New diversions.
	Push the first two diversions.
	(AT_INIT): Don't.
	(AT_INIT, AT_SETUP, AT_CLEANUP): Adjust to use the named
	diversions.

2000-11-23  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CLEANUP): Factor the computation of
	at_test_count into...
	(AT_INIT): here.
	Use an sh variable, at_data_files, instead of an hard coded list.

2000-11-23  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CLEAN_FILE_IFELSE, AT_CLEANUP_FILE)
	(AT_CLEANUP_FILES): New	macros.
	(AT_SETUP, AT_CHECK, AT_CLEANUP): Use them.
	(AT_CHECK): Fix a use of at_verbose.