@@ -43,6 +43,9 @@ m4_copy_unm4([m4_decr])
 m4_copy_unm4([m4_define])
 m4_copy_unm4([m4_defn])
 m4_copy_unm4([m4_divert])
+m4_copy_unm4([m4_divnum])
+m4_copy_unm4([m4_errprint])
+m4_copy_unm4([m4_esyscmd])
 m4_copy_unm4([m4_incr])
 m4_copy_unm4([m4_index])
 m4_copy_unm4([m4_indir])
